--- a/package.json
+++ b/package.json
@@ -3,19 +3,28 @@
   "version": "1.5.0",
   "private": true,
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.5.0",
+    "emailjs-com": "^3.2.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
+    "js-sha256": "^0.9.0",
     "moment": "2.29.1",
     "node-sass": "6.0.0",
     "nouislider": "15.1.0",
+    "qrcode": "^1.4.4",
     "react": "17.0.2",
     "react-bootstrap-switch": "15.5.3",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
+    "react-qr-reader": "^2.2.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
-    "reactstrap": "8.9.0"
+    "react-timeline-vertical-component": "^1.0.1",
+    "react-to-pdf": "0.0.14",
+    "reactstrap": "8.9.0",
+    "web-vitals": "^2.1.1",
+    "web3": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
